Move CircleBypass components from pages folder

--- a/src/pages/circle-bypass/index.astro
+++ b/src/pages/circle-bypass/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import { CircleBypass } from "./CircleBypass";
+import { CircleBypass } from "../../components/CircleBypass";
 ---
 
 <Layout title="Mini-games / Circle bypass">
