--- a/src/pages/circle-bypass/index.astro
+++ b/src/pages/circle-bypass/index.astro
@@ -7,7 +7,8 @@ import { CircleBypass } from "../../apps/CircleBypass";
 	<main>
 		<h1>Circle bypass</h1>
 		<p>
-			Mass Effect 1 inspired circle bypass (used there in decryption/hacking)
+			Mass Effect 1 inspired circle bypass frogger-like game (used there in
+			decryption/hacking).
 		</p>
 		<p>
 			Move the cursor around the moving and static obstacles in, advancing it
