--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import Card from "../components/Card.astro";
 			<Card
 				href="./circle-bypass"
 				title="Circle bypass"
-				body="Mass Effect 1 inspired circle bypass (used there in decryption/hacking)"
+				body="Mass Effect 1 inspired circle bypass frogger-like game (used there in decryption/hacking)"
 			/>
-			<Card
+			<!-- <Card
 				href="./fishing-clicker"
 				title="Fishing clicker"
 				body="Wartales-like clicker meter (used there in the fishing mini-game)"
@@ -26,7 +26,7 @@ import Card from "../components/Card.astro";
 				href="./lock-picking"
 				title="Easy lock-picking"
 				body="Skyrim/wartales like lockpicking mini-game"
-			/>
+			/> -->
 		</ul>
 	</main>
 </Layout>
