--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,21 +15,68 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body class="main-grid">
+		<main class="main-grid__main">
+			<slot />
+		</main>
+		<footer class="main-grid__footer">
+			Viacheslav Azarov, 2023<br />
+			<a
+				href="https://github.com/religiosa1/mini-games"
+				target="_blank"
+				rel="noopener noreferrer nofollow"
+			>
+				Source code
+			</a>
+		</footer>
 	</body>
 </html>
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		--accent-gradient: linear-gradient(
+			45deg,
+			rgb(var(--accent)),
+			#da62c4 30%,
+			white 60%
+		);
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		background-color: #f6f6f6;
 	}
 	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+	.main-grid {
+		margin: 0;
+		padding: 0;
+		display: grid;
+		grid-template-areas:
+			"main"
+			"footer";
+		grid-template-rows: 1fr auto;
+		grid-template-columns: min(100%, 1024px);
+		min-height: 100vh;
+		min-height: 100dvh;
+		margin: auto;
+		padding: 1.5rem;
+		max-width: 60ch;
+	}
+
+	.main-grid__main {
+		grid-area: main;
+	}
+	.main-grid__footer {
+		grid-area: footer;
+		margin-top: 1rem;
+		padding: 0.5rem;
+	}
+
+	h1 {
+		font-size: 3rem;
+		font-weight: 800;
+		margin: 0;
 	}
 </style>
