--- a/src/apps/CircleBypass/CircleBypass.scss
+++ b/src/apps/CircleBypass/CircleBypass.scss
@@ -13,6 +13,9 @@
   .circle-bypass__overlay {
     all: unset;
     position: absolute;
-    inset: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
