--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,8 @@ const { title } = Astro.props;
 		min-height: 100dvh;
 		margin: auto;
 		padding: 1.5rem;
-		max-width: 60ch;
+		max-width: 90ch;
+		box-sizing: border-box;
 	}
 
 	.main-grid__main {
